--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.oreo.mcommonjobs.Activtity.MainActivity"
-    android:background="@drawable/background3">
+    android:background="@drawable/background_white">
 
 
     <LinearLayout
@@ -19,20 +19,11 @@
         android:weightSum="100">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="70">
+            android:layout_weight="70"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/white"
-                android:textSize="14sp"
-                android:layout_alignTop="@+id/button"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="58dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -77,7 +68,8 @@
                         android:onClick="onClick (SignInActivity)"
                         android:layout_centerHorizontal="true"
                         android:layout_weight="0"
-                        android:layout_gravity="center" />
+                        android:layout_gravity="center"
+                        />
                 </LinearLayout>
 
                 <LinearLayout
