--- a/app/src/main/res/layout/activity_navigation_jobprovider.xml
+++ b/app/src/main/res/layout/activity_navigation_jobprovider.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background4"
+    android:background="white"
     tools:context="com.oreo.mcommonjobs.Activtity.NavigationActivityForJobProvider">
 
     <LinearLayout
@@ -21,11 +21,21 @@
         android:weightSum="100">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="20">
+            android:layout_weight="10"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/page_title_profile_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:fontFamily="Asap-Regular"
+                android:text="Menu"
+                android:textAlignment="center"
+                android:textColor="#06bebd"
+                android:textSize="44sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -49,10 +59,10 @@
                     android:layout_weight="50">
 
                     <Button
-                        android:text="@string/main_menu_view_applicants"
+                        android:text="@string/main_menu_search"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:id="@+id/btn_view_applicants"
+                        android:id="@+id/btn_search"
                         android:layout_weight="1" />
                 </LinearLayout>
 
