--- a/app/src/main/res/layout/activity_navigation_jobseeker.xml
+++ b/app/src/main/res/layout/activity_navigation_jobseeker.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_navigation_jobprovider"
+    android:id="@+id/activity_navigation"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background4"
+    android:background="#FFFFFF"
     tools:context="com.oreo.mcommonjobs.Activtity.NavigationActivityForJobSeeker">
 
     <LinearLayout
@@ -21,11 +21,21 @@
         android:weightSum="100">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="20">
+            android:layout_weight="10"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/page_title_profile_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:fontFamily="Asap-Regular"
+                android:text="Menu"
+                android:textAlignment="center"
+                android:textColor="#06bebd"
+                android:textSize="44sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -49,7 +59,7 @@
                     android:layout_weight="50">
 
                     <Button
-                        android:text="Search"
+                        android:text="@string/main_menu_search"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/btn_search"
@@ -63,7 +73,7 @@
                     android:layout_weight="50">
 
                     <Button
-                        android:text="Profile"
+                        android:text="@string/main_menu_profile_title"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/btn_profile" />
@@ -84,7 +94,7 @@
                     android:layout_weight="50">
 
                     <Button
-                        android:text="View Jobs"
+                        android:text="@string/main_menu_add_job"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/btn_addjob" />
@@ -97,7 +107,7 @@
                     android:layout_weight="50">
 
                     <Button
-                        android:text="Messages"
+                        android:text="@string/messages"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/btn_messages" />
