OREO-127 #comment Converted TextViews in Profile list to CheckedTextView to provide a better visual of the user's selected profile.

--- a/app/src/main/res/layout/profilefragment.xml
+++ b/app/src/main/res/layout/profilefragment.xml
@@ -6,7 +6,8 @@
 
 
 
- <TextView
+ <CheckedTextView
+     android:checkMark="?android:attr/listChoiceIndicatorMultiple"
      android:layout_width="match_parent"
      android:layout_height="60sp"
      android:id="@+id/prof"
