--- a/app/src/main/res/layout/activity_navigation_jobseeker.xml
+++ b/app/src/main/res/layout/activity_navigation_jobseeker.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background4"
+    android:background="#FFFFFF"
     tools:context="com.oreo.mcommonjobs.Activtity.NavigationActivityForJobSeeker">
 
     <LinearLayout
@@ -21,11 +21,21 @@
         android:weightSum="100">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="20">
+            android:layout_weight="10"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/page_title_profile_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:fontFamily="Asap-Regular"
+                android:text="Menu"
+                android:textAlignment="center"
+                android:textColor="#06bebd"
+                android:textSize="44sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -52,8 +62,7 @@
                         android:text="ViewJobs profile jobs"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:id="@+id/btn_view_jobs_for_your_profile"
-                        android:layout_weight="1" />
+                        android:id="@+id/btn_view_jobs_for_your_profile"/>
                 </LinearLayout>
 
                 <LinearLayout
