--- a/app/src/main/res/layout/activity_navigation_jobseeker.xml
+++ b/app/src/main/res/layout/activity_navigation_jobseeker.xml
@@ -4,27 +4,24 @@
     android:id="@+id/activity_navigation_jobprovider"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#FFFFFF"
     tools:context="com.oreo.mcommonjobs.Activtity.NavigationActivityForJobSeeker">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentRight="false"
+        android:orientation="vertical"
         android:weightSum="100">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="10"
-            android:orientation="horizontal">
+            android:gravity="bottom"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/page_title_profile_info"
@@ -39,85 +36,125 @@
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="80"
+            android:orientation="vertical"
+            android:paddingLeft="1dp"
+            android:paddingRight="1dp"
             android:weightSum="100">
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="35"
+                android:layout_weight="33"
+                android:orientation="horizontal"
                 android:weightSum="100">
 
                 <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="50">
+                    android:layout_weight="50"
+                    android:orientation="horizontal">
 
                     <Button
+                        android:id="@+id/btn_view_jobs_for_your_profile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="50"
+                        android:background="@drawable/btn_square_menu"
                         android:text="ViewJobs profile jobs"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/btn_view_jobs_for_your_profile"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="50">
+                        android:textColor="#06bebd" />
 
                     <Button
-                        android:text="Profile"
+                        android:id="@+id/btn_profile"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:id="@+id/btn_profile" />
+                        android:layout_weight="50"
+                        android:background="@drawable/btn_square_menu"
+                        android:text="Profile"
+                        android:textColor="#06bebd" />
                 </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="35"
+                android:layout_weight="34"
+                android:orientation="horizontal"
                 android:weightSum="100">
 
                 <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="50">
+                    android:layout_weight="50"
+                    android:orientation="horizontal">
 
                     <Button
+                        android:id="@+id/btn_addjob"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="44"
+                        android:background="@drawable/btn_square_menu"
                         android:text="View All Jobs"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/btn_addjob" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="50">
+                        android:textColor="#06bebd" />
 
                     <Button
-                        android:text="Messages"
-                        android:layout_width="match_parent"
+                        android:id="@+id/btn_messages"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:id="@+id/btn_messages" />
+                        android:layout_weight="50"
+                        android:background="@drawable/btn_square_menu"
+                        android:text="Messages"
+                        android:textColor="#06bebd" />
                 </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="20"></LinearLayout>
+                android:layout_weight="33"
+                android:orientation="horizontal"
+                android:weightSum="100">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="50"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/extra_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="50"
+                        android:background="@drawable/btn_square_menu"
+                        android:text="ViewJobs profile jobs"
+                        android:textColor="#06bebd" />
+
+                    <Button
+                        android:id="@+id/extra_btn_two"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="50"
+                        android:background="@drawable/btn_square_menu"
+                        android:text="Profile"
+                        android:textColor="#06bebd" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="10"
+            android:background="#06bebd"
+            android:orientation="vertical">
+
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
