--- a/app/src/main/res/layout/activity_application_questions.xml
+++ b/app/src/main/res/layout/activity_application_questions.xml
@@ -11,7 +11,8 @@
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/yearsEXP">
 
         <RadioButton android:id="@+id/yearsOption1"
             android:layout_width="wrap_content"
@@ -39,7 +40,8 @@
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/availability">
 
         <RadioButton android:id="@+id/avalibityOption1"
             android:layout_width="wrap_content"
@@ -67,7 +69,8 @@
         android:text="Enter expected wage"/>
 <EditText
     android:layout_width="80sp"
-    android:layout_height="30sp" />
+    android:layout_height="30sp"
+    android:id="@+id/expectedwage"/>
 
     <Button
         android:layout_width="wrap_content"
