--- a/app/src/main/res/layout/activity_view_applicant_credentials.xml
+++ b/app/src/main/res/layout/activity_view_applicant_credentials.xml
@@ -54,6 +54,7 @@
         android:id="@+id/exepctedwage"/>
 
     <Button
+        android:id="@+id/acceptApplicant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Accept Applicant"/>
