OREO-80 #comment Fixed URLPath strings for rating php files and added volley method in the ProviderEmployeesListActivity class.

--- a/app/src/main/res/layout/activity_navigation_jobprovider.xml
+++ b/app/src/main/res/layout/activity_navigation_jobprovider.xml
@@ -107,10 +107,10 @@
                     android:layout_weight="50">
 
                     <Button
-                        android:text="@string/messages"
+                        android:id="@+id/btn_rating"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:id="@+id/btn_messages" />
+                        android:text="@string/rating" />
                 </LinearLayout>
             </LinearLayout>
 
