--- a/app/src/main/res/layout/activity_provider_rating_menu.xml
+++ b/app/src/main/res/layout/activity_provider_rating_menu.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.oreo.mcommonjobs.Activtity.ProviderRatingMenuActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rating Menu"
-        tools:layout_editor_absoluteX="154dp"
-        tools:layout_editor_absoluteY="55dp" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="43dp"
+        android:text="Rating Menu" />
 
     <Button
         android:id="@+id/btn_rate_seeker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rate a Job Seeker"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="193dp" />
+        android:layout_below="@+id/textView4"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="96dp"
+        android:text="Rate a job seeker" />
 
     <Button
         android:id="@+id/btn_view_my_ratings_provider"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View My Ratings"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="305dp" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_below="@+id/btn_rate_seeker"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
+        android:text="View My Ratings" />
+</RelativeLayout>
