--- a/app/src/main/res/layout/activity_provider_ratings_list.xml
+++ b/app/src/main/res/layout/activity_provider_ratings_list.xml
@@ -20,7 +20,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/providerjoblist"
+        android:id="@+id/providerRatingslist"
         android:layout_below="@+id/ProviderRatingsTitle">
     </ListView>
 
