--- a/app/src/main/res/layout/activity_provider_rating_menu.xml
+++ b/app/src/main/res/layout/activity_provider_rating_menu.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/raterName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -15,7 +15,7 @@
         android:id="@+id/btn_rate_seeker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView4"
+        android:layout_below="@+id/raterName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="96dp"
         android:text="Rate a job seeker" />
