added account button to navigation activity for both jobseeker an                                                                                                                                                             d job provider, added layout for account activity

--- a/app/src/main/res/layout/activity_navigation_jobseeker.xml
+++ b/app/src/main/res/layout/activity_navigation_jobseeker.xml
@@ -135,12 +135,12 @@
                         android:textColor="#06bebd" />
 
                     <Button
-                        android:id="@+id/extra_btn_two"
+                        android:id="@+id/btn_account"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="50"
                         android:background="@drawable/btn_square_menu"
-                        android:text="Profile"
+                        android:text="Account"
                         android:textColor="#06bebd" />
                 </LinearLayout>
 
