--- a/app/src/main/res/layout/activity_navigation_jobprovider.xml
+++ b/app/src/main/res/layout/activity_navigation_jobprovider.xml
@@ -15,10 +15,10 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:weightSum="100">
+        android:weightSum="100"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -113,6 +113,15 @@
                         android:id="@+id/btn_messages" />
                 </LinearLayout>
             </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_account"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_square_menu"
+                android:text="Account"
+                android:textColor="#06bebd"
+                android:layout_weight="20.15" />
 
             <LinearLayout
                 android:orientation="horizontal"
