modifed jobseekernavigation layout to remove uneeded buttons

--- a/app/src/main/res/layout/activity_navigation_jobprovider.xml
+++ b/app/src/main/res/layout/activity_navigation_jobprovider.xml
@@ -73,10 +73,10 @@
                     android:layout_weight="50">
 
                     <Button
-                        android:text="@string/main_menu_profile_title"
+                        android:text="Account"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:id="@+id/btn_profile" />
+                        android:id="@+id/btn_account" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -114,14 +114,6 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <Button
-                android:id="@+id/btn_account"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_square_menu"
-                android:text="Account"
-                android:textColor="#06bebd"
-                android:layout_weight="20.15" />
 
             <LinearLayout
                 android:orientation="horizontal"
