--- a/app/src/main/res/layout/activity_provider_rating_menu.xml
+++ b/app/src/main/res/layout/activity_provider_rating_menu.xml
@@ -1,31 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="#FFFFFF"
+    tools:context="com.oreo.mcommonjobs.Activtity.ProviderRatingMenuActivity">
 
     <TextView
         android:id="@+id/raterName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_margin="20dp"
+        android:fontFamily="Asap-Regular"
         android:layout_marginTop="43dp"
+        android:textColor="#06bebd"
+        android:textSize="44sp"
+        android:textAlignment="center"
         android:text="Rating Menu" />
 
-    <Button
-        android:id="@+id/btn_rate_seeker"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/raterName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="96dp"
-        android:text="Rate a job seeker" />
+        android:layout_weight="0.65"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:weightSum="2">
 
-    <Button
-        android:id="@+id/btn_view_my_ratings_provider"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_rate_seeker"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"
-        android:text="View My Ratings" />
-</RelativeLayout>
+        <Button
+            android:id="@+id/btn_rate_seeker"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/raterName"
+            android:layout_centerHorizontal="true"
+            android:layout_centervertical="true"
+            android:layout_weight="1"
+            android:textSize="30sp"
+            android:textAllCaps="false"
+            android:layout_marginBottom="15dp"
+            android:textColor="#4c70a3"
+            android:background="@drawable/roundedbtn2"
+            android:text="Rate a job seeker" />
+
+        <Button
+            android:id="@+id/btn_view_my_ratings_provider"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/btn_rate_seeker"
+            android:layout_marginBottom="15dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centervertical="true"
+            android:textAllCaps="false"
+            android:layout_weight="1"
+            android:textColor="#4c70a3"
+            android:textSize="30sp"
+            android:background="@drawable/roundedbtn2"
+            android:text="View My Ratings" />
+
+    </LinearLayout>
+
+</LinearLayout>
