fixes and UI updates

--- a/app/src/main/res/layout/activity_provider_rate.xml
+++ b/app/src/main/res/layout/activity_provider_rate.xml
@@ -113,7 +113,7 @@
             android:padding="10dp"
             android:textSize="20sp"/>
 
-        <TextView
+        <EditText
             android:id="@+id/comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
