--- a/app/src/main/res/layout/rating_content.xml
+++ b/app/src/main/res/layout/rating_content.xml
@@ -13,28 +13,29 @@
         android:background="#c0c0c0" />
 
     <TextView
+        android:id="@+id/raterName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="25sp"
         android:textColor="#06bebd"
         android:textStyle="bold"
-        android:id="@+id/raterName"
         android:scrollHorizontally="true"
         android:maxLines="1"
         android:layout_marginBottom="8dp"
         android:ellipsize="end"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp" />
 
     <TextView
         android:id="@+id/ratingAverage"
-        android:textSize="16sp"
+        android:textColor="#4c70a3"
+        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:lineSpacingExtra="-3dp"
         android:layout_marginBottom="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"/>
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"/>
 
     <View
         android:id="@+id/bottom_line"
