--- a/app/src/main/res/layout/seeker_content.xml
+++ b/app/src/main/res/layout/seeker_content.xml
@@ -8,8 +8,11 @@
         android:id="@+id/seekerName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textSize="20sp"
-        />
+        android:textSize="25sp"
+        android:textColor="#4c70a3"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:scrollHorizontally="true"
+        android:maxLines="1"
+        android:ellipsize="end"/>
 </LinearLayout>
