--- a/app/src/main/res/layout/rating_content.xml
+++ b/app/src/main/res/layout/rating_content.xml
@@ -21,7 +21,6 @@
         android:textStyle="bold"
         android:scrollHorizontally="true"
         android:maxLines="1"
-        android:text="My Ratings"
         android:ellipsize="end"/> />
 
     <TextView
@@ -31,8 +30,7 @@
         android:textStyle="bold"
         android:textSize="20sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="My Ratings"/>
+        android:layout_height="wrap_content"/>
 
     <View
         android:id="@+id/bottom_line"
